# nautilus

./: Cargo.toml  Dockerfile  config-ron.patch  config.ron  readme.md
.git-hooks/: Cargo.toml
afl_mutator/: Cargo.toml
afl_mutator/src/: lib.rs
antlr_parser/: Cargo.toml
antlr_parser/src/: JavaScript.g4  bin.rs  calculator.g4  javascript_custom.json  javascript_new.json  lib.rs  lua.json  php_custom.json  pythonGrammarComplete.json  pythonGrammarSimplified.json  python_custom.json  ruby_antlr_old.g4  ruby_grammar_less_recursion.json  ruby_new_antlr_grammar.g4  ruby_new_antlr_grammar.json  url_schema.json
forksrv/: Cargo.toml  Dockerfile  run
forksrv/instrument/: test.c
forksrv/instrument/clang_wrapper/: .gitignore  Makefile  afl-llvm-pass.cpp  redqueen-clang
forksrv/instrument/rt/: Makefile  common.c  runtime.h  runtime_config.h  runtime_types.h
forksrv/src/: exitreason.rs  lib.rs  main.rs
grammartec/: Cargo.toml
grammartec/src/: chunkstore.rs  context.rs  lib.rs  mutator.rs  newtypes.rs  recursion_info.rs  rule.rs  tree.rs
gramophone/: Cargo.toml  config.ron  fuzz_mruby.sh  fuzz_mruby_daemon.sh  fuzz_mruby_kill.sh  lcov_diff.py  local_snapshotter.py  readme.md  snapshot_process_mruby.sh  timer.sh  triaging.sh
gramophone/afl/: dict.txt  run_afl.sh
gramophone/afl/in/: case1.rb  case10.rb  case2.rb  case3.rb  case4.rb  case5.rb  case6.rb  case7.rb  case8.rb  case9.rb
gramophone/src/: config.rs  fuzzer.rs  generator.rs  generator.rs~  main.rs  main.rs~  mutation_tester.rs  queue.rs  rules.rs  shared_state.rs  state.rs  test_runner.rs
